<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/sample1Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample1"/>

    <Button
        android:id="@+id/sample2Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample2"/>

    <Button
        android:id="@+id/sample3Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample3"/>

    <Button
        android:id="@+id/sample4Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample4"/>

</LinearLayout>